Fix spacing under article topics

--- a/frontend/scss/molecules/_m-inline-list.scss
+++ b/frontend/scss/molecules/_m-inline-list.scss
@@ -23,5 +23,6 @@ Spaces and wraps
   flex: 0 0 auto;
   margin-top: 12px;
   margin-left: 12px;
+  margin-bottom: 12px;
 }
 
